Fixed certificates broken links on mobile site

--- a/m/style.css
+++ b/m/style.css
@@ -166,7 +166,7 @@ p.certification {
   border-radius: 7px;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 56px;
+  margin-bottom: 52px;
   padding: 20px 60px 60px 60px;
 }
 
